Fixed an issue with the wrapper on the newer Java versions. Fixed an issue with missing icons in the data source selection dialog. Fixed an issue with a possible null pointer in MS_LimsConverter related to strange PTMs. Moved project to version 2.5.5-beta.